--- a/MMM-MotionDetector.njk
+++ b/MMM-MotionDetector.njk
@@ -2,9 +2,7 @@
 {% if error %}
     <div class="light small bold">{{error}}</div>
 {% else %}
-    <div class="light small normal">motion detected at: <span class="bright">{{lastTimeMotionDetected}}</span> (score: <span class="bright">{{lastScoreDetected}}</span>)</div>
-    {% if timeout >= 0 %}
-       <div class="light small normal">powered off: <span class="bright">{{duration}}</span> (<span class="bright">{{percentagePoweredOff}} %</span> of uptime)</div>
-    {% endif %}
+    <div class="light small normal"><span class="bright">{{lastTimeMotionDetected}}</span> (score: <span class="bright">{{lastScoreDetected}}</span>)</div>
+    <div id="camera"></div>
 {% endif %}
 </div>
